feature/api add avatar upload
