# storage/api-docs/api-docs.json
@@ -451,6 +451,56 @@
                     }
                 ]
             }
+        },
+        "/api/user/{userId}/avatar": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update user's avatar by ID",
+                "description": "Update user avatar by ID",
+                "operationId": "userPostAvatar",
+                "parameters": [
+                    {
+                        "name": "userId",
+                        "in": "path",
+                        "description": "ID of user",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "description": "User info",
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "User's password updated response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "user": {
+                                            "type": "object",
+                                            "example": "User"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ]
+            }
         }
     },
     "components": {
